--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Webfilms Movie Recommendations</title>
-    <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Limelight"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
-    </section>
-    <!-- add script tag here -->     
+    <section></section>
+
+    <script src="main.js"></script>
+    <script src="movies.js"></script>
+    
   </body>
 </html>
